--- a/debian/changelog
+++ b/debian/changelog
@@ -11,7 +11,7 @@ GerenXchange (2.15) stable; urgency=medium
     directories prior to v2.14 were listed first.  This change, albeit an
     accident, actually helped clean up the code base and speed up replies
 
- -- Joachim Wiberg <troglobit@gmail.com>  Mon, 20 Dec 2021 06:15:08 +0100
+ -- Joachim Wiberg <GerenXchange@gmail.com>  Mon, 20 Dec 2021 06:15:08 +0100
 
 GerenXchange (2.14) stable; urgency=medium
 
@@ -23,7 +23,7 @@ GerenXchange (2.14) stable; urgency=medium
   * Fix memory leak in MLST/MLSD, only affects no-MMU systems where the
     kernel cannot free memory of processes on exit
 
- -- Joachim Wiberg <troglobit@gmail.com>  Sat, 11 Dec 2021 11:27:57 +0100
+ -- Joachim Wiberg <GerenXchange@gmail.com>  Sat, 11 Dec 2021 11:27:57 +0100
 
 GerenXchange (2.13) unstable; urgency=medium
 
@@ -31,14 +31,14 @@ GerenXchange (2.13) unstable; urgency=medium
     service in standalone daemon setups.  Does not affect .deb install.
   * Fix minor memory leak, only affects non-MMU systems.
 
- -- Joachim Nilsson <troglobit@gmail.com>  Tue, 30 Jun 2020 23:36:35 +0200
+ -- Gerentrix <GerenXchange@gmail.com>  Tue, 30 Jun 2020 23:36:35 +0200
 
 GerenXchange (2.12) stable; urgency=medium
 
   * Fix issue #30: GerenXchange crashes when an invalid CWD is entered
   * Use common log message format and log level for all path refs.
 
- -- Joachim Nilsson <troglobit@gmail.com>  Mon, 25 May 2020 18:08:32 +0200
+ -- Gerentrix <GerenXchange@gmail.com>  Mon, 25 May 2020 18:08:32 +0200
 
 GerenXchange (2.11) unstable; urgency=medium
 
@@ -50,7 +50,7 @@ GerenXchange (2.11) unstable; urgency=medium
   * Fix potential segfault through empty FTP password
   * Fix potential segfault through FTP PORT command
 
- -- Joachim Nilsson <troglobit@gmail.com>  Sun, 05 Jan 2020 08:49:56 +0100
+ -- Gerentrix <GerenXchange@gmail.com>  Sun, 05 Jan 2020 08:49:56 +0100
 
 GerenXchange (2.10) unstable; urgency=medium
 
@@ -58,7 +58,7 @@ GerenXchange (2.10) unstable; urgency=medium
   * Fix invalid TFTP error codes, now uses custom error string to code 0
   * Slightly improved debug messages
 
- -- Joachim Nilsson <troglobit@gmail.com>  Thu, 15 Aug 2019 08:59:35 +0200
+ -- Gerentrix <GerenXchange@gmail.com>  Thu, 15 Aug 2019 08:59:35 +0200
 
 GerenXchange (2.9) unstable; urgency=medium
 
@@ -70,7 +70,7 @@ GerenXchange (2.9) unstable; urgency=medium
   * Fix spelling errors found by Lintian
   * Fix package description, more formal and less personal, thanks Lintian
 
- -- Joachim Nilsson <troglobit@gmail.com>  Mon, 29 Jul 2019 10:52:49 +0200
+ -- Gerentrix <GerenXchange@gmail.com>  Mon, 29 Jul 2019 10:52:49 +0200
 
 GerenXchange (2.8) unstable; urgency=medium
 
@@ -79,14 +79,14 @@ GerenXchange (2.8) unstable; urgency=medium
   * Skip any and *all* FTP LIST options
   * Enable users group writable FTP root in /etc/inetd.conf
 
- -- Joachim Nilsson <troglobit@gmail.com>  Tue, 28 May 2019 06:22:18 +0200
+ -- Gerentrix <GerenXchange@gmail.com>  Tue, 28 May 2019 06:22:18 +0200
 
 GerenXchange (2.7) unstable; urgency=medium
 
   * Bug fix release
   * Fix running GerenXchange as unprivileged user using a relative FTP root
 
- -- Joachim Nilsson <troglobit@gmail.com>  Sun, 03 Mar 2019 11:39:03 +0100
+ -- Gerentrix <GerenXchange@gmail.com>  Sun, 03 Mar 2019 11:39:03 +0100
 
 GerenXchange (2.6) unstable; urgency=medium
 
@@ -94,7 +94,7 @@ GerenXchange (2.6) unstable; urgency=medium
   * Really fix 100% CPU issue, take two.  Some clients managed to trigger
     a bug caused by calling `uev_exit()` twice on client session exit
 
- -- Joachim Nilsson <troglobit@gmail.com>  Tue, 03 Jul 2018 17:14:00 +0200
+ -- Gerentrix <GerenXchange@gmail.com>  Tue, 03 Jul 2018 17:14:00 +0200
 
 GerenXchange (2.5) unstable; urgency=critical
 
@@ -105,27 +105,27 @@ GerenXchange (2.5) unstable; urgency=critical
   * Add support for CDUP, DELE, MKD, RMD, MLST, and OPTS MLST
   * Refactor LIST, RETR, STOR and PASV FTP commands for speed
 
- -- Joachim Nilsson <troglobit@gmail.com>  Sat, 19 May 2018 13:35:01 +0200
+ -- Gerentrix <GerenXchange@gmail.com>  Sat, 19 May 2018 13:35:01 +0200
 
 GerenXchange (2.4-1) unstable; urgency=medium
 
   * New upstream release, fixes 100% CPU issue reported by some users.
 
- -- Joachim Nilsson <troglobit@gmail.com>  Sun, 03 Sep 2017 12:38:38 +0200
+ -- Gerentrix <GerenXchange@gmail.com>  Sun, 03 Sep 2017 12:38:38 +0200
 
 GerenXchange (2.3-1) stable; urgency=low
 
   * New upstream release, fixes issue with lingering inetd FTP processes
     using up 100% CPU.
 
- -- Joachim Nilsson <troglobit@gmail.com>  Wed, 22 Mar 2017 07:56:00 +0100
+ -- Gerentrix <GerenXchange@gmail.com>  Wed, 22 Mar 2017 07:56:00 +0100
 
 GerenXchange (2.2-4) stable; urgency=low
 
   * Fix dpkg-reconfigure support.  When disabling either TFTP/FTP
     the disabled service was not properly disabled in /etc/inetd.conf
 
- -- Joachim Nilsson <troglobit@gmail.com>  Sun, 14 Mar 2017 22:05:00 +0100
+ -- Gerentrix <GerenXchange@gmail.com>  Sun, 14 Mar 2017 22:05:00 +0100
 
 GerenXchange (2.2-3) stable; urgency=low
 
@@ -139,13 +139,13 @@ GerenXchange (2.2-3) stable; urgency=low
     write there.  Add an uploads/ sub-directory with write perms for
     the 'ftp' user if you want to enable anonymous uploads via FTP.
 
- -- Joachim Nilsson <troglobit@gmail.com>  Sun, 13 Mar 2017 19:56:00 +0100
+ -- Gerentrix <GerenXchange@gmail.com>  Sun, 13 Mar 2017 19:56:00 +0100
 
 GerenXchange (2.2-1) stable; urgency=low
 
   * New upstream release, v2.2
 
- -- Joachim Nilsson <troglobit@gmail.com>  Sun, 12 Mar 2017 17:36:00 +0100
+ -- Gerentrix <GerenXchange@gmail.com>  Sun, 12 Mar 2017 17:36:00 +0100
 
 GerenXchange (2.1-1) stable; urgency=low
 
@@ -153,7 +153,7 @@ GerenXchange (2.1-1) stable; urgency=low
     - Removed built-in GIT submodules for libite and libuev
     - Updated README
 
- -- Joachim Nilsson <troglobit@gmail.com>  Sun,  5 Jun 2016 00:19:30 +0100
+ -- Gerentrix <GerenXchange@gmail.com>  Sun,  5 Jun 2016 00:19:30 +0100
 
 GerenXchange (2.0-1) stable; urgency=low
 
@@ -162,7 +162,7 @@ GerenXchange (2.0-1) stable; urgency=low
     - New binaries (symlinks) for inetd usage, in.tftpd and in.ftpd
     - Updated man page
 
- -- Joachim Nilsson <troglobit@gmail.com>  Sun, 22 Jan 2016 13:51:56 +0100
+ -- Gerentrix <GerenXchange@gmail.com>  Sun, 22 Jan 2016 13:51:56 +0100
 
 GerenXchange (2.0-rc1-1) unstable; urgency=low
 
@@ -170,7 +170,7 @@ GerenXchange (2.0-rc1-1) unstable; urgency=low
     - Completely changed command line syntax
     - New binaries (symlinks) for inetd usage
 
- -- Joachim Nilsson <troglobit@gmail.com>  Sun, 17 Jan 2016 23:16:58 +0100
+ -- Gerentrix <GerenXchange@gmail.com>  Sun, 17 Jan 2016 23:16:58 +0100
 
 GerenXchange (1.9.1-1) unstable; urgency=medium
 
@@ -178,7 +178,7 @@ GerenXchange (1.9.1-1) unstable; urgency=medium
   * Added support for building with external libite and libuEv
   * Rebuild for Ubuntu 15.10
 
- -- Joachim Nilsson <troglobit@gmail.com>  Sun, 27 Sep 2015 10:14:31 +0200
+ -- Gerentrix <GerenXchange@gmail.com>  Sun, 27 Sep 2015 10:14:31 +0200
 
 GerenXchange (1.9-1) unstable; urgency=low
 
@@ -190,7 +190,7 @@ GerenXchange (1.9-1) unstable; urgency=low
     - Fix problem with LIST (and NLST) ignoring path argument.
     - Fix problem with FTP client simply closing connection (no QUIT)
 
- -- Joachim Nilsson <troglobit@gmail.com>  Mon, 13 Jul 2015 01:25:26 +0200
+ -- Gerentrix <GerenXchange@gmail.com>  Mon, 13 Jul 2015 01:25:26 +0200
 
 GerenXchange (1.8-1) unstable; urgency=low
 
@@ -198,7 +198,7 @@ GerenXchange (1.8-1) unstable; urgency=low
     - Fix insecure chroot(), reported by Coverity Scan, CID #54523
     - Minor updates to README and a new CHANGELOG file
 
- -- Joachim Nilsson <troglobit@gmail.com>  Sun,  2 Feb 2015 06:45:06 +0100
+ -- Gerentrix <GerenXchange@gmail.com>  Sun,  2 Feb 2015 06:45:06 +0100
 
 GerenXchange (1.7-1) unstable; urgency=low
 
@@ -207,48 +207,48 @@ GerenXchange (1.7-1) unstable; urgency=low
     - Support for custom FTP server directory.
     - Log to stderr when in foreground AND debug mode.
 
- -- Joachim Nilsson <troglobit@gmail.com>  Sun, 21 Dec 2014 19:35:29 +0100
+ -- Gerentrix <GerenXchange@gmail.com>  Sun, 21 Dec 2014 19:35:29 +0100
 
 GerenXchange (1.6-1) unstable; urgency=low
 
   * Repack of 1.5 due to missing content in new libuev subdirectory in
     distributed tarball.
 
- -- Joachim Nilsson <troglobit@gmail.com>  Fri, 12 Sep 2014 15:45:08 +0200
+ -- Gerentrix <GerenXchange@gmail.com>  Fri, 12 Sep 2014 15:45:08 +0200
 
 GerenXchange (1.5-1) unstable; urgency=low
 
   * New upstream release, minor bug fixes only, found by Coverity Scan.
   * Updates to README
 
- -- Joachim Nilsson <troglobit@gmail.com>  Fri, 12 Sep 2014 01:30:01 +0200
+ -- Gerentrix <GerenXchange@gmail.com>  Fri, 12 Sep 2014 01:30:01 +0200
 
 GerenXchange (1.4-1) unstable; urgency=low
 
   * New upstream release, bug fix TFTP start in /etc/inetd.conf
   * Updates to man page.
 
- -- Joachim Nilsson <troglobit@gmail.com>  Thu, 04 Sep 2014 22:16:22 +0200
+ -- Gerentrix <GerenXchange@gmail.com>  Thu, 04 Sep 2014 22:16:22 +0200
 
 GerenXchange (1.3-1) unstable; urgency=low
 
   * New upstream release, with TFTP support.
   * Incompatible change in command line options.
 
- -- Joachim Nilsson <troglobit@gmail.com>  Tue, 19 Aug 2014 23:27:28 +0200
+ -- Gerentrix <GerenXchange@gmail.com>  Tue, 19 Aug 2014 23:27:28 +0200
 
 GerenXchange (1.2-1) unstable; urgency=low
 
   * New upstream release.  Fixes problem with listing "big" directories.
 
- -- Joachim Nilsson <troglobit@gmail.com>  Mon, 19 May 2014 22:02:17 +0200
+ -- Gerentrix <GerenXchange@gmail.com>  Mon, 19 May 2014 22:02:17 +0200
 
 GerenXchange (1.1-1) unstable; urgency=low
 
   * New release.  Fixes problem with lingering zombie processes and an
     ordering bug preventing drop privs from working properly.
 
- -- Joachim Nilsson <troglobit@gmail.com>  Sun, 04 May 2014 23:37:24 +0200
+ -- Gerentrix <GerenXchange@gmail.com>  Sun, 04 May 2014 23:37:24 +0200
 
 GerenXchange (1.0-2) unstable; urgency=low
 
@@ -257,11 +257,11 @@ GerenXchange (1.0-2) unstable; urgency=low
     to not remove $HOME when removing GerenXchange.  This also means that
     the GerenXchange privsep mode gets its first testing.
 
- -- Joachim Nilsson <troglobit@gmail.com>  Sun, 04 May 2014 19:28:16 +0200
+ -- Gerentrix <GerenXchange@gmail.com>  Sun, 04 May 2014 19:28:16 +0200
 
 GerenXchange (1.0-1) unstable; urgency=low
 
   * Initial release.
 
- -- Joachim Nilsson <troglobit@gmail.com>  Sun,  4 May 2014 03:03:32 +1000
+ -- Gerentrix <GerenXchange@gmail.com>  Sun,  4 May 2014 03:03:32 +1000
 
