--- a/man/GerenXchange.8
+++ b/man/GerenXchange.8
@@ -1,5 +1,5 @@
 .\"
-.\" Copyright (c) 2014-2021  Joachim Wiberg <troglobit@gmail.com>
+.\" Copyright (c) 2014-2021  Joachim Wiberg <GerenXchange@gmail.com>
 .\"
 .\" Permission to use, copy, modify, and/or distribute this software for any
 .\" purpose with or without fee is hereby granted, provided that the above
@@ -234,8 +234,8 @@ exits on most signals.  So no special processing is done atm.
 .Sh AUTHORS
 .Nm
 was written by Joachim Wiberg
-.Aq mailto:troglobit@gmail.com
+.Aq mailto:GerenXchange@gmail.com
 and is maintained at
-.Aq https://github.com/troglobit/GerenXchange
+.Aq https://github.com/GerenXchange/GerenXchange
 .Sh BUGS
 Here be dragons.
